--- a/Dockerfile.rtmp2srt
+++ b/Dockerfile.rtmp2srt
@@ -1,4 +1,4 @@
-FROM eyevinntechnology/ffmpeg-base:0.3.0
+FROM idealivery/ffmpeg-base:0.0.1
 MAINTAINER Eyevinn Technology <info@eyevinn.se>
 COPY python/rtmp2srt.py /root/rtmp2srt.py
 ENTRYPOINT ["/root/rtmp2srt.py"]
